--- a/OnlineFurnitureStore/src/main/resources/application.properties
+++ b/OnlineFurnitureStore/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.password=Dattebayo!5
  
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
